--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# Node.js
+  
 node_modules/
 backend/node_modules/
 npm-debug.log*
@@ -35,52 +35,18 @@ build/
 # React build
 **/build/
 
-# Next.js
-.next/
-out/
-
-# Parcel / Webpack
-.cache/
-.parcel-cache/
-webpack-stats.json
-
-# Coverage
-coverage/
-.nyc_output/
-
-# VS Code / JetBrains / Editor settings
 .vscode/
 .idea/
-*.sublime-workspace
-*.sublime-project
 
-# TypeScript
-*.tsbuildinfo
-
-# Misc
 .DS_Store
 Thumbs.db
 *.tgz
 *.gz
 *.zip
-
-# Local .env backup or test files
 .env.backup
 .env.example
 .env.test
-
-# Optional if you use Firebase or similar tools
-.firebase/
-.firebase-debug.log
-
-# Optional Docker stuff
-docker-compose.override.yml
-.docker/
-
-# Ignore frontend dependencies if separated
-client/node_modules/
-client/build/
-
-# Ignore backend dependencies if separated
+frontend/node_modules/
+frontend/build/
 server/node_modules/
 server/dist/
