--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "react-router": "^7.5.1",
     "stream-chat": "^8.60.0",
     "stream-chat-react": "^12.14.0",
+    "tailwind-merge": "^3.3.1",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
